--- a/src/app/profile/profile/profile.component.scss
+++ b/src/app/profile/profile/profile.component.scss
@@ -8,6 +8,10 @@
   transition: transform 0.3s ease;
 }
 
+#profileTitle {
+  color: #324229;
+}
+
 .profile-pic:hover {
   transform: scale(1.05);
 }
