--- a/src/app/travels/travels-card/travels-card.component.html
+++ b/src/app/travels/travels-card/travels-card.component.html
@@ -21,7 +21,7 @@
 
     <div class="card-body d-flex flex-column">
         <div class="d-flex justify-content-between">
-            <h5 class="card-title fs-2 d-inline">{{ travel().title }}</h5>
+            <h5 class="card-title fs-2 d-inline title">{{ travel().title }}</h5>
             <span class="badge bg-success categoryBadge"
                 style="height: 22px; position: absolute; right: 2%; top: -2%;">{{ travel().category }}</span>
         </div>
@@ -34,26 +34,60 @@
         <p class="card-text">Child price: {{ travel().price.childPrice }}€</p>
         <p class="card-text">Max people: {{ travel().maxPeople }}</p>
         <p class="card-text">Min age: {{ travel().minAge }}</p>
-
-        <div class="d-flex flex-column" style="position: absolute; right: 20%; top: 56%;">
-            <span class="badge bg-info mb-4">🌡 {{ travel().temperature }}</span>
-            <span class="badge bg-warning text-dark mb-4">⭐ {{ travel().rate }}</span>
-            @if(!isLogged()){
-            <span class="badge bg-danger mb-4">🤍 {{ travel().likes }}</span>
-            }
+        
+        <div class="d-flex p-3 divButtons">
+        <div class="d-flex flex-column me-4">
+            <span class="bg-info mb-4 text-white temperature" style="pointer-events: none;">🌡 {{ travel().temperature }}</span>
+            <span class="bg-warning text-white mb-4 rate ps-3" style="pointer-events: none;">⭐ {{ travel().rate }}</span>
             @if(isLogged()){
-            <button class="badge btn bg-danger mb-4">🤍 {{ travel().likes }}</button>
+            <button (click)="likeTravel(isLiked() ? 'unlike' : 'like')" [class.liked]="isLiked()"
+                [class.not-liked]="!isLiked()" class="like-button">
+                {{ isLiked() ? '❤️' : '🤍' }} {{ travel().likes }}
+            </button>
+            }
+            @else {
+            <span class="bg-danger mb-4 like-button text-white" style="pointer-events: none;">🤍 {{ travel().likes }}</span>
             }
         </div>
-        <div class="d-flex flex-column" style="position: absolute; right: 10%; top: 48%;">
+        <div class="d-flex flex-column ms-4">
             @if(isLogged()){
-            <a [routerLink]="['/travels', travel()._id]" class="btn btn-primary btn-sm mb-4">Details</a>
-            <a [routerLink]="['/travels', travel()._id]" class="btn btn-primary btn-sm mb-4">Guardar</a>
             @if(user()!.rol === 'admin') {
-            <button class="btn btn-danger btn-sm mb-4" (click)="deleted.emit(travel()._id)">Eliminar</button>
+            <button class="btn btn-danger btn-sm mb-4 delete" [attr.data-bs-target]="'#modalDeleteTravel-' + travel()._id"
+                data-bs-toggle="modal">Delete</button>
             }
+            <button (click)="buyTravel(isBought() ? 'unbought' : 'bought')" [class.bought]="isBought()"
+                [class.not-bought]="!isBought()" class="bought-button btn btn-sm mb-4">
+                @if (isBought()) {
+                     <p class="mb-0" style="display: block; width: 80px;">Bought</p>
+                }
+                @else {
+                    <p class="mb-0" style="display: block; width: 80px;">Buy Travel</p>
+                }
+            </button>
+            <button (click)="saveTravel(isSaved() ? 'unsave' : 'save')" [class.saved]="isSaved()"
+                [class.not-saved]="!isSaved()" class="save-button btn btn-sm">
+                <i class="bi" [ngClass]="isSaved() ? 'bi-bookmark-check' : 'bi-bookmark'"></i>
+            </button>
             }
+        </div>
         </div>
     </div>
 
+</div>
+
+<div class="modal fade" [id]="'modalDeleteTravel-' + travel()._id" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-sm modal-dialog-centered">
+        <div class="modal-content text-center p-4 border-0 shadow rounded">
+            <h5 class="mb-4 fs-5">¿Are you sure you want to delete this travel?</h5>
+            <div class="d-flex justify-content-center gap-3">
+                <button type="button" class="btn btn-outline-secondary px-3" data-bs-dismiss="modal">
+                    Cancel
+                </button>
+                <button type="button" class="btn btn-danger px-3" data-bs-dismiss="modal"
+                    (click)="deleteTravel(travel()._id!)">
+                    Delete
+                </button>
+            </div>
+        </div>
+    </div>
 </div>
